<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BuyMe</string>
    <string name="customer">Customer</string>
    <string name="retailer">Retailer</string>
    <string name="parse_client_key">gx7aAuDf9filfYLUY3YbssSbZ6WJP1eHmSmMD6NC</string>
    <string name="parse_app_id">jjY6fgpMVhzI7xBFiyFIeXKOg1fPrnhmh1AJEuZU</string>
    <string name="title_activity_retailer_main">RetailerMain</string>
    <string name="progressmessage">Please Wait</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="action_settings">Settings</string>
    <string name="Shop_info">Shop Info</string>
    <string name="shop_name">Shop name</string>
    <string name="tv_div">:</string>
    <string name="description">Description</string>
    <string name="ratings">Ratings</string>
    <string name="rated">rated</string>
    <string name="contact_details">Contact Details</string>
    <string name="phone">Phone</string>
    <string name="Address">Address</string>
    <string name="mail_id">Mail ID</string>
    <string name="website">Website</string>
    <string name="profile_note">Note : Information entered here will be displayed to customers</string>
    <string name="Save">SAVE</string>
    <string name="shop_name_hint">Enter a name</string>
    <string name="description_hint">(optional)</string>
    <string name="phone_hint">Mobile, Landline, etc</string>
    <string name="address_hint">Shop address</string>
    <string name="mail_id_hint">(optional)</string>
    <string name="website_hint">(optional)</string>
    <string name="product_name">Name</string>
    <string name="product_price">Price</string>
    <string name="product_description">Description</string>
    <string name="otional">(optional)</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="cust_name_hint">your name</string>
    <string name="cust_phone_hint">number</string>
    <string name="cust_address_hint">delivery address</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="add_product">Add Product</string>
    <string name="order_no">Order No :</string>
    <string name="sellers_info">Sellers Info</string>
    <string name="order_status">Order Status</string>
    <string name="name">Name</string>
    <string name="product_info">Product Info</string>
    <string name="rs">Rs </string>
    <string name="rate_title">Rate This Seller</string>
    <string name="comment">Comment</string>
    <string name="optional">(optional)</string>
    <string name="saved">Saved</string>
    <string name="networkerror">NetworkError</string>
    <string name="title_activity_retailer_profile">RetailerProfile</string>
    <string name="deleted">Deleted</string>
    <string name="locationerror">Select Location</string>
    <string name="autocomplete_hint">Enter Address</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_basket">Basket</string>
    <string name="changge_password">Change Password</string>
    <string name="tv_current_pasword">Old Password</string>
    <string name="tv_new_password">New Password</string>
    <string name="verify_password">Confirm Password</string>
    <string name="menu_basket">Basket</string>
    <string name="menu_wishlist">WishList</string>
    <string name="Logout">Logout</string>
    <string name="LogoutQuestion">Are you sure you want to log out?</string>
    <string name="ChangePassword">Change Password</string>
    <string name="passworderror">Password Doesnt Match</string>
    <string name="passwordsuccess">Password Changed</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="See_Friends_WishList">See Friends WishList</string>
    <string name="ShareApp">Share App</string>
    <string name="title_activity_wishlist">WishList</string>
    <string name="et_old_password">old password</string>
    <string name="et_new_password">new password</string>
    <string name="et_reenter_password">verify</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="pasword">Password</string>
    <string name="login">PROCEED</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verification_req">Send verification code</string>
    <string name="signup">SIGN UP</string>
    <string name="forgot_pasword">Forgot Password?</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="title_activity_listview">Listview</string>
    <string name="ShareAppBody">Buy Me! A fun shopping app that shows product near you or most popular suiting your needs. click on the link to download from Google play store. https://play.google.com/store/apps/details?id=com.online.shopping.buyme </string>
    <string name="LocationChange">Change Location</string>
    <string name="notifcationmessage">Hey! You got new order</string>
    <string name="title_activity_order_status">OrderStatus</string>
    <string name="mobilenumber_doesnt_exist">Mobile Number is not Registered</string>
    <string name="retailer_profile">Profile</string>
    <string name="ProductShareMessage"> click on the link to download or launch Buy Me app. </string>
    <string name="AppProductShareLink">www.buyme.com</string>
    <string name="product_doesnt_exist">Product Doesnt Exist</string>
    <string name="orderstatustitle_for_retailer">Buyers Info</string>
    <string name="orderstatustitle_for_customer">Sellers Info</string>
    <string name="popular">Popular</string>
    <string name="electronics">Electronics</string>
    <string name="fashionandstyle">Fashion And Style</string>
    <string name="homeappliances">Home Appliances</string>
    <string name="product_search_hint">Search Product</string>
    <string name="buynow">BUY NOW</string>
    <string name="MobileNumber_Not_Registered">Mobile Number is not Registered</string>
    <string name="Password_Incorrect">Incorrect Password</string>
    <string name="Login_success">Logged In</string>
    <string name="mobilenumber_invalid">Invalid Mobile Number</string>
    <string name="mobile_number_already_exist">Mobile Number Already Registered</string>
    <string name="Registeration_success">Registration Sucess</string>
    <string name="send_message_importantnote_title">Please Note</string>
    <string name="send_message_importantnote_message">A one time verification code will be sent to your mobile. Standard SMS charges may apply. Please Dont Switch From This Screen Until Sms Verification proccess is completed</string>
    <string name="product_add_name_error">Please Enter Product name</string>
    <string name="product_add_price_error">Please Enter Product Price</string>
    <string name="Internet_on">Internet not available</string>
    <string name="Proceed_Basket">Delivery Not Available</string>
    <string name="Proceed_Note">Few products in your cart are not available for delivery</string>
    <string name="Proceed_order_Confirmation_title">Confirm Order</string>
    <string name="Proceed_order_Confirmation_message">Order once Confirmed cannot be cancelled</string>
    <string name="Proceed_order_CANCELLATION_title">Cancel the order</string>
    <string name="Proceed_order_CANCELLATION_message">Are you sure you want to cancel the order?</string>
    <string name="Proceed_order_Customer_CANCELLATION_message">Order has been cancelled. Do you want to delete the Orderstatus now ?</string>
    <string name="search_friend_hint">Search</string>
    <string name="Proceed_order_Delivered_title">Order Delivered</string>
    <string name="Proceed_order_Ddelivered_message">Please Make sure the order has been Delivered, before making changes.</string>
    <string name="Notify">Notify Users</string>
    <string name="NotifyQuestion">Do you want to notify your starred customers about this product?</string>
    <string name="Favourites">Favourites</string>
    <string name="favourites_delete">Favourites Delete</string>
    <string name="favourites_delete_question">Do you want to remove this shop from favourites?</string>
    <string name="total">Total price</string>
    <string name="Qty">Quantity</string>
    <string name="connection_error">Internet Not Available</string>
    <string name="connection_error_content">Please make sure you have a working internet connection and try again</string>
    <string name="FilterOption">Filter By</string>
    <string name="filter_distance">By Distance</string>
    <string name="filter_price">By Price</string>
    <string name="filter_cod">Cash on Delivery</string>
    <string name="any">Any</string>
    <string name="distance1">Within 5 kms</string>
    <string name="distance2">Within 10 kms</string>
    <string name="distance3">Within 20 kms</string>
    <string name="distance4">Above 20 kms</string>
    <string name="price1">0 - 500 INR</string>
    <string name="price2">500 - 1000 INR</string>
    <string name="price3">1000 - 5000 INR</string>
    <string name="price4">5000 - 15000 INR</string>
    <string name="price5">15000 - 30000 INR</string>
    <string name="price6">30000 - 50000 INR</string>
    <string name="price7">Above 50000 INR</string>
    <string name="price0">Any</string>
    <string name="cod">COD</string>
    <string name="product_add_price_limit_error">Exceeds price limit</string>
    <string name="feedback">Feedback</string>
    <string name="submit">Submit</string>
    <string name="feedback_hint">Type a message</string>
    <string name="favourites">Favourite Retailers</string>
    <string name="wishlist">Wishlist</string>
    <string name="friendswishlist">Friends Wishlist</string>
    <string name="changelocation">Change Location</string>
    <string name="settings">Settings</string>
    <string name="feedback_saved">Feedback sent</string>
    <string name="GPSAlertDialogMessage">Please ensure location</string>
    <string name="verifymsg">Please wait, you will recieve a missed call to verify your number</string>
    <string name="feedback_title">Feedback</string>
</resources>
