<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings_favourites"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/favourites"
                android:padding="@dimen/content_magin"
                android:textColor="@color/black"
                android:textSize="@dimen/tv_body" />

            <TextView
                android:id="@+id/settingss_wishlist"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_magin"
                android:text="@string/wishlist"
                android:textColor="@color/black"
                android:textSize="@dimen/tv_body" />

            <TextView
                android:id="@+id/settings_friends_wishlist"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_magin"
                android:text="@string/friendswishlist"
                android:textColor="@color/black"
                android:textSize="@dimen/tv_body" />


            <TextView
                android:id="@+id/settings_change_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_magin"
                android:text="@string/changelocation"
                android:textColor="@color/black"
                android:textSize="@dimen/tv_body" />

            <TextView
                android:id="@+id/settings_share_app"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_magin"
                android:text="@string/ShareApp"
                android:textColor="@color/black"
                android:textSize="@dimen/tv_body" />

            <TextView
                android:id="@+id/settings_feedback"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_magin"
                android:text="@string/feedback"
                android:textColor="@color/black"
                android:textSize="@dimen/tv_body" />


            <TextView
                android:id="@+id/settings_logout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_magin"
                android:text="@string/Logout"
                android:textColor="@color/black"
                android:textSize="@dimen/tv_body" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

